--- a/index.html
+++ b/index.html
@@ -5,77 +5,232 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vroom Expertise | Garage Automobile Professionnel</title>
     <style>
-        :root { --primary: #e67e22; --dark: #1a1a1a; --light: #f4f4f4; }
-        body { font-family: 'Helvetica Neue', Arial, sans-serif; margin: 0; line-height: 1.6; color: #333; }
-        header { background: var(--dark); color: var(--primary); padding: 40px 20px; text-align: center; border-bottom: 5px solid var(--primary); }
-        nav { background: #222; padding: 15px; text-align: center; position: sticky; top: 0; z-index: 1000; }
-        nav a { color: white; text-decoration: none; margin: 0 20px; font-weight: bold; font-size: 0.9rem; }
+        :root {
+            --primary: #e67e22; /* Orange mécanique */
+            --dark: #1a1a1a;
+            --light: #f4f4f4;
+            --white: #ffffff;
+        }
+
+        body {
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            color: #333;
+            scroll-behavior: smooth; /* Pour un défilement doux vers les sections */
+        }
+
+        /* En-tête */
+        header {
+            background: var(--dark);
+            color: var(--primary);
+            padding: 40px 20px;
+            text-align: center;
+            border-bottom: 5px solid var(--primary);
+        }
+
+        header h1 { margin: 0; font-size: 2.5rem; letter-spacing: 2px; }
+        header p { margin: 5px 0 0; color: #aaa; text-transform: uppercase; }
+
+        /* Menu de Navigation */
+        nav {
+            background: #222;
+            padding: 15px;
+            text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+            font-size: 0.9rem;
+            transition: color 0.3s;
+        }
+
+        nav a:hover { color: var(--primary); }
+
+        /* Section Hero */
         .hero { 
             background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?auto=format&fit=crop&w=1350&q=80');
-            background-size: cover; background-position: center; height: 450px; display: flex; align-items: center; justify-content: center; color: white; text-align: center;
+            background-size: cover;
+            background-position: center;
+            height: 450px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
         }
-        .cta-button { background: var(--primary); color: white; padding: 18px 35px; text-decoration: none; border-radius: 5px; font-weight: bold; transition: 0.3s; }
+
+        .hero h2 { font-size: 2.8rem; margin-bottom: 15px; }
+        .cta-button {
+            display: inline-block;
+            background: var(--primary);
+            color: white;
+            padding: 18px 35px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            font-size: 1.1rem;
+            transition: 0.3s;
+            margin-top: 20px;
+        }
         .cta-button:hover { background: #d35400; transform: scale(1.05); }
-        .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 60px 10%; background: var(--light); }
-        .card { background: white; padding: 40px; border-radius: 10px; text-align: center; shadow: 0 10px 20px rgba(0,0,0,0.1); }
-        footer { background: var(--dark); color: white; padding: 60px 20px; text-align: center; }
-        .grid-footer { display: flex; justify-content: space-around; flex-wrap: wrap; max-width: 1100px; margin: 0 auto; }
-        .grid-footer div { margin: 20px; }
+
+        /* Sections Générales */
+        section { padding: 80px 10%; }
+        h2.section-title { 
+            text-align: center; 
+            color: var(--dark); 
+            margin-bottom: 50px; 
+            position: relative; 
+        }
+        h2.section-title::after {
+            content: '';
+            display: block;
+            width: 60px;
+            height: 4px;
+            background: var(--primary);
+            margin: 10px auto;
+        }
+
+        /* Services */
+        .services-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 30px;
+        }
+
+        .card {
+            background: var(--white);
+            padding: 30px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+            border: 1px solid #eee;
+        }
+
+        .card h3 { color: var(--primary); margin-top: 0; }
+
+        /* Avis Clients */
+        .avis-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .avis-card {
+            background: #fff;
+            padding: 25px;
+            border-left: 5px solid var(--primary);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            font-style: italic;
+        }
+
+        /* Pied de page */
+        footer {
+            background: var(--dark);
+            color: white;
+            padding: 60px 20px;
+            text-align: center;
+        }
+
+        .footer-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 40px;
+            max-width: 1100px;
+            margin: 0 auto;
+        }
+
+        footer h4 { color: var(--primary); margin-bottom: 15px; }
+        footer a { color: #fff; text-decoration: none; }
+        footer a:hover { color: var(--primary); }
+
     </style>
 </head>
 <body>
 
-<header>
-    <h1>VROOM EXPERTISE</h1>
-    <p>VOTRE PARTENAIRE AUTOMOBILE DE CONFIANCE À PARIS</p>
-</header>
+    <header>
+        <h1>VROOM EXPERTISE</h1>
+        <p>Expert en Mécanique & Diagnostic Automobile</p>
+    </header>
 
-<nav>
-    <a href="#accueil">ACCUEIL</a>
-    <a href="#services">SERVICES</a>
-    <a href="#avis">AVIS CLIENTS</a>
-    <a href="#contact">CONTACT</a>
-</nav>
+    <nav>
+        <a href="#accueil">ACCUEIL</a>
+        <a href="#services">NOS SERVICES</a>
+        <a href="#avis">AVIS CLIENTS</a>
+        <a href="#contact">CONTACT</a>
+    </nav>
 
-<section class="hero" id="accueil">
-    <div>
-        <h2 style="font-size: 2.5rem;">MÉCANIQUE DE PRÉCISION</h2>
-        <p style="font-size: 1.2rem; margin-bottom: 30px;">Entretien, Réparation & Diagnostic Électronique</p>
-        <a href="tel:+33145789210" class="cta-button">PRENDRE RENDEZ-VOUS : 01 45 78 92 10</a>
-    </div>
-</section>
-
-<section class="services" id="services">
-    <div class="card">
-        <h3 style="color: var(--primary);">🛠 ENTRETIEN</h3>
-        <p>Vidange, freinage, pneus et révision constructeur avec garantie préservée.</p>
-    </div>
-    <div class="card">
-        <h3 style="color: var(--primary);">⚙️ MÉCANIQUE</h3>
-        <p>Expertise complète : Embrayage, boîte de vitesse, moteur et distribution.</p>
-    </div>
-    <div class="card">
-        <h3 style="color: var(--primary);">💻 DIAGNOSTIC</h3>
-        <p>Équipements de pointe pour détecter les pannes électroniques complexes.</p>
-    </div>
-</section>
-
-<footer id="contact">
-    <div class="grid-footer">
+    <section class="hero" id="accueil" style="padding:0;">
         <div>
-            <h4>ADRESSE</h4>
-            <p>15 Rue de la Paix<br>75002 Paris</p>
+            <h2>Votre voiture entre de bonnes mains</h2>
+            <p>Plus de 15 ans d'expérience au service de votre sécurité.</p>
+            <a href="tel:+33145789210" class="cta-button">APPELER : 01 45 78 92 10</a>
         </div>
-        <div>
-            <h4>CONTACT</h4>
-            <p>01 45 78 92 10<br>contact@vroom-expertise.fr</p>
+    </section>
+
+    <section id="services">
+        <h2 class="section-title">NOS SERVICES</h2>
+        <div class="services-grid">
+            <div class="card">
+                <h3>🔧 ENTRETIEN RAPIDE</h3>
+                <p>Vidange, filtres, pneumatiques et freinage. Service sans rendez-vous disponible.</p>
+            </div>
+            <div class="card">
+                <h3>⚙️ GROSSE MÉCANIQUE</h3>
+                <p>Courroie de distribution, embrayage, moteur et boîte de vitesses.</p>
+            </div>
+            <div class="card">
+                <h3>💻 DIAGNOSTIC ÉLEC</h3>
+                <p>Recherche de pannes complexes avec les dernières valises de diagnostic.</p>
+            </div>
         </div>
-        <div>
-            <h4>HORAIRES</h4>
-            <p>Lun - Ven : 08:00 - 19:00<br>Samedi : 09:00 - 12:00</p>
+    </section>
+
+    <section id="avis" style="background-color: var(--light);">
+        <h2 class="section-title">AVIS CLIENTS</h2>
+        <div class="avis-container">
+            <div class="avis-card">
+                <p>"Garage très honnête. Pas de mauvaise surprise sur la facture et travail soigné."</p>
+                <p><strong>- Jean Dupont</strong> ⭐⭐⭐⭐⭐</p>
+            </div>
+            <div class="avis-card">
+                <p>"Équipe réactive. Ma voiture a été réparée dans la journée. Je recommande !"</p>
+                <p><strong>- Sarah B.</strong> ⭐⭐⭐⭐⭐</p>
+            </div>
+            <div class="avis-card">
+                <p>"Enfin des experts qui savent expliquer techniquement les réparations."</p>
+                <p><strong>- Marc V.</strong> ⭐⭐⭐⭐</p>
+            </div>
         </div>
-    </div>
-</footer>
+    </section>
+
+    <footer id="contact">
+        <div class="footer-grid">
+            <div>
+                <h4>LOCALISATION</h4>
+                <p>📍 15 Rue de la Paix<br>75002 Paris, France</p>
+            </div>
+            <div>
+                <h4>CONTACT</h4>
+                <p>📞 <a href="tel:+33145789210">01 45 78 92 10</a></p>
+                <p>📧 <a href="mailto:contact@vroom-expertise.fr">contact@vroom-expertise.fr</a></p>
+            </div>
+            <div>
+                <h4>HORAIRES</h4>
+                <p>Lun - Ven : 08:00 - 19:00<br>Samedi : 09:00 - 12:00</p>
+            </div>
+        </div>
+        <p style="margin-top: 50px; font-size: 0.8rem; color: #777;">&copy; 2026 Vroom Expertise. Tous droits réservés.</p>
+    </footer>
 
 </body>
 </html>
